--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,48 +1,24 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8cc0ba">  <td>20/02/06 12:44:49</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateBatchFlowBH1.CreateBatchFlowBH()[pri:0, instance:com.atc.seleniumframework.tests.CreateBatchFlowBH1@3f49dace]">CreateBatchFlowBH</td> 
-  <td>main@1335298403</td>   <td></td> </tr>
-<tr bgcolor="dc939b">  <td>20/02/06 12:45:25</td>   <td>36148</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Yeast_Create_Start_Batch.CreateBatchFlowBH()[pri:0, instance:com.atc.seleniumframework.tests.Yeast_Create_Start_Batch@544fe44c]">CreateBatchFlowBH</td> 
-  <td>main@1335298403</td>   <td></td> </tr>
-<tr bgcolor="a86dd7">  <td>20/02/06 12:46:43</td>   <td>113373</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Fermentation_Create_Start_Batch.CreateBatchFlowBH()[pri:0, instance:com.atc.seleniumframework.tests.Fermentation_Create_Start_Batch@52a86356]">CreateBatchFlowBH</td> 
-  <td>main@1335298403</td>   <td></td> </tr>
-<tr bgcolor="a29665">  <td>20/02/06 12:47:36</td>   <td>167162</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrightBeer_Create_Start_Batch.CreateBatchFlowBH()[pri:0, instance:com.atc.seleniumframework.tests.BrightBeer_Create_Start_Batch@20398b7c]">CreateBatchFlowBH</td> 
-  <td>main@1335298403</td>   <td></td> </tr>
-<tr bgcolor="c285f4">  <td>20/02/06 12:45:21</td>   <td>31853</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.afterMethod(org.testng.ITestResult)[pri:0, instance:com.atc.seleniumframework.tests.CreateBatchFlowBH1@3f49dace]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@1335298403</td>   <td></td> </tr>
-<tr bgcolor="c285f4">  <td>20/02/06 12:46:39</td>   <td>109488</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.afterMethod(org.testng.ITestResult)[pri:0, instance:com.atc.seleniumframework.tests.Yeast_Create_Start_Batch@544fe44c]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@1335298403</td>   <td></td> </tr>
-<tr bgcolor="c285f4">  <td>20/02/06 12:47:32</td>   <td>163253</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.afterMethod(org.testng.ITestResult)[pri:0, instance:com.atc.seleniumframework.tests.Fermentation_Create_Start_Batch@52a86356]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@1335298403</td>   <td></td> </tr>
-<tr bgcolor="c285f4">  <td>20/02/06 12:48:20</td>   <td>211040</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.afterMethod(org.testng.ITestResult)[pri:0, instance:com.atc.seleniumframework.tests.BrightBeer_Create_Start_Batch@20398b7c]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@1335298403</td>   <td></td> </tr>
-<tr bgcolor="c285f4">  <td>20/02/06 12:49:19</td>   <td>269365</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.afterMethod(org.testng.ITestResult)[pri:0, instance:com.atc.seleniumframework.tests.InvalidLogin@527740a2]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@1335298403</td>   <td></td> </tr>
-<tr bgcolor="c285f4">  <td>20/02/06 12:49:19</td>   <td>270291</td> <td title="&lt;&lt;TestBase.afterSuite()[pri:0, instance:com.atc.seleniumframework.tests.InvalidLogin@527740a2]">&lt;&lt;afterSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1335298403</td>   <td></td> </tr>
-<tr bgcolor="c285f4">  <td>20/02/06 12:45:21</td>   <td>32222</td> <td>&nbsp;</td><td title="&lt;&lt;TestBase.afterTest()[pri:0, instance:com.atc.seleniumframework.tests.CreateBatchFlowBH1@3f49dace]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1335298403</td>   <td></td> </tr>
-<tr bgcolor="c285f4">  <td>20/02/06 12:46:39</td>   <td>109488</td> <td>&nbsp;</td><td title="&lt;&lt;TestBase.afterTest()[pri:0, instance:com.atc.seleniumframework.tests.Yeast_Create_Start_Batch@544fe44c]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1335298403</td>   <td></td> </tr>
-<tr bgcolor="c285f4">  <td>20/02/06 12:47:32</td>   <td>163253</td> <td>&nbsp;</td><td title="&lt;&lt;TestBase.afterTest()[pri:0, instance:com.atc.seleniumframework.tests.Fermentation_Create_Start_Batch@52a86356]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1335298403</td>   <td></td> </tr>
-<tr bgcolor="c285f4">  <td>20/02/06 12:48:20</td>   <td>211040</td> <td>&nbsp;</td><td title="&lt;&lt;TestBase.afterTest()[pri:0, instance:com.atc.seleniumframework.tests.BrightBeer_Create_Start_Batch@20398b7c]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1335298403</td>   <td></td> </tr>
-<tr bgcolor="c285f4">  <td>20/02/06 12:49:19</td>   <td>269661</td> <td>&nbsp;</td><td title="&lt;&lt;TestBase.afterTest()[pri:0, instance:com.atc.seleniumframework.tests.InvalidLogin@527740a2]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1335298403</td>   <td></td> </tr>
-<tr bgcolor="c285f4">  <td>20/02/06 12:44:45</td>   <td>-4310</td> <td title="&gt;&gt;TestBase.beforeSuite()[pri:0, instance:com.atc.seleniumframework.tests.InvalidLogin@527740a2]">&gt;&gt;beforeSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1335298403</td>   <td></td> </tr>
-<tr bgcolor="c285f4">  <td>20/02/06 12:44:45</td>   <td>-4294</td> <td>&nbsp;</td><td title="&gt;&gt;TestBase.beforeTest(java.lang.String)[pri:0, instance:com.atc.seleniumframework.tests.CreateBatchFlowBH1@3f49dace]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1335298403</td>   <td></td> </tr>
-<tr bgcolor="c285f4">  <td>20/02/06 12:45:22</td>   <td>32866</td> <td>&nbsp;</td><td title="&gt;&gt;TestBase.beforeTest(java.lang.String)[pri:0, instance:com.atc.seleniumframework.tests.Yeast_Create_Start_Batch@544fe44c]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1335298403</td>   <td></td> </tr>
-<tr bgcolor="c285f4">  <td>20/02/06 12:46:39</td>   <td>110111</td> <td>&nbsp;</td><td title="&gt;&gt;TestBase.beforeTest(java.lang.String)[pri:0, instance:com.atc.seleniumframework.tests.Fermentation_Create_Start_Batch@52a86356]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1335298403</td>   <td></td> </tr>
-<tr bgcolor="c285f4">  <td>20/02/06 12:47:33</td>   <td>163879</td> <td>&nbsp;</td><td title="&gt;&gt;TestBase.beforeTest(java.lang.String)[pri:0, instance:com.atc.seleniumframework.tests.BrightBeer_Create_Start_Batch@20398b7c]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1335298403</td>   <td></td> </tr>
-<tr bgcolor="c285f4">  <td>20/02/06 12:48:21</td>   <td>211678</td> <td>&nbsp;</td><td title="&gt;&gt;TestBase.beforeTest(java.lang.String)[pri:0, instance:com.atc.seleniumframework.tests.InvalidLogin@527740a2]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1335298403</td>   <td></td> </tr>
-<tr bgcolor="7bafac">  <td>20/02/06 12:48:24</td>   <td>214966</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InvalidLogin.verifyUserAccount()[pri:0, instance:com.atc.seleniumframework.tests.InvalidLogin@527740a2]">verifyUserAccount</td> 
-  <td>main@1335298403</td>   <td></td> </tr>
+<tr bgcolor="7ec378">  <td>20/03/26 22:32:39</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Invalid_CreditCard_Num.Invalid_CreditCard_Num()[pri:0, instance:com.atc.seleniumframework.tests.Invalid_CreditCard_Num@7e0b0338]">Invalid_CreditCard_Num</td> 
+  <td>main@1604125387</td>   <td></td> </tr>
+<tr bgcolor="8cc0ba">  <td>20/03/26 22:30:00</td>   <td>-159461</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Pillow_Purchase.Pillow_Purchase()[pri:0, instance:com.atc.seleniumframework.tests.Pillow_Purchase@1ce92674]">Pillow_Purchase</td> 
+  <td>main@1604125387</td>   <td></td> </tr>
+<tr bgcolor="7fa893">  <td>20/03/26 22:32:35</td>   <td>-4582</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.afterMethod(org.testng.ITestResult)[pri:0, instance:com.atc.seleniumframework.tests.Pillow_Purchase@1ce92674]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@1604125387</td>   <td></td> </tr>
+<tr bgcolor="7fa893">  <td>20/03/26 22:33:11</td>   <td>31243</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.afterMethod(org.testng.ITestResult)[pri:0, instance:com.atc.seleniumframework.tests.Invalid_CreditCard_Num@7e0b0338]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@1604125387</td>   <td></td> </tr>
+<tr bgcolor="7fa893">  <td>20/03/26 22:33:12</td>   <td>32312</td> <td title="&lt;&lt;TestBase.afterSuite()[pri:0, instance:com.atc.seleniumframework.tests.Invalid_CreditCard_Num@7e0b0338]">&lt;&lt;afterSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1604125387</td>   <td></td> </tr>
+<tr bgcolor="7fa893">  <td>20/03/26 22:32:35</td>   <td>-4580</td> <td>&nbsp;</td><td title="&lt;&lt;TestBase.afterTest()[pri:0, instance:com.atc.seleniumframework.tests.Pillow_Purchase@1ce92674]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1604125387</td>   <td></td> </tr>
+<tr bgcolor="7fa893">  <td>20/03/26 22:33:11</td>   <td>31244</td> <td>&nbsp;</td><td title="&lt;&lt;TestBase.afterTest()[pri:0, instance:com.atc.seleniumframework.tests.Invalid_CreditCard_Num@7e0b0338]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1604125387</td>   <td></td> </tr>
+<tr bgcolor="7fa893">  <td>20/03/26 22:29:53</td>   <td>-166792</td> <td title="&gt;&gt;TestBase.beforeSuite()[pri:0, instance:com.atc.seleniumframework.tests.Invalid_CreditCard_Num@7e0b0338]">&gt;&gt;beforeSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1604125387</td>   <td></td> </tr>
+<tr bgcolor="7fa893">  <td>20/03/26 22:29:53</td>   <td>-166754</td> <td>&nbsp;</td><td title="&gt;&gt;TestBase.beforeTest(java.lang.String)[pri:0, instance:com.atc.seleniumframework.tests.Pillow_Purchase@1ce92674]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1604125387</td>   <td></td> </tr>
+<tr bgcolor="7fa893">  <td>20/03/26 22:32:36</td>   <td>-3632</td> <td>&nbsp;</td><td title="&gt;&gt;TestBase.beforeTest(java.lang.String)[pri:0, instance:com.atc.seleniumframework.tests.Invalid_CreditCard_Num@7e0b0338]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1604125387</td>   <td></td> </tr>
 </table>
