--- a/test-output/old/Suite/toc.html
+++ b/test-output/old/Suite/toc.html
@@ -8,9 +8,9 @@
 <h3><p align="center">Results for<br/><em>Suite</em></p></h3>
 <table border='1' width='100%'>
 <tr valign='top'>
-<td>5 tests</td>
-<td><a target='mainFrame' href='classes.html'>5 classes</a></td>
-<td>5 methods:<br/>
+<td>2 tests</td>
+<td><a target='mainFrame' href='classes.html'>2 classes</a></td>
+<td>2 methods:<br/>
 &nbsp;&nbsp;<a target='mainFrame' href='methods.html'>chronological</a><br/>
 &nbsp;&nbsp;<a target='mainFrame' href='methods-alphabetical.html'>alphabetical</a><br/>
 &nbsp;&nbsp;<a target='mainFrame' href='methods-not-run.html'>not run (0)</a></td>
@@ -20,42 +20,18 @@
 <td><a target='mainFrame' href='reporter-output.html'>reporter output</a></td>
 <td><a target='mainFrame' href='testng.xml.html'>testng.xml</a></td>
 </tr></table>
-<table width='100%' class='test-failed'>
+<table width='100%' class='test-passed'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>Batch Creation and flow through Brewhouse Equipment1 (0/1/0)</td><td valign='top' align='right'>
-  <a href='Batch Creation and flow through Brewhouse Equipment1.html' target='mainFrame'>Results</a>
-</td></tr></table>
-</td></tr><p/>
-</table>
-
-<table width='100%' class='test-failed'>
-<tr><td>
-<table style='width: 100%'><tr><td valign='top'>Invalid login (0/1/0)</td><td valign='top' align='right'>
-  <a href='Invalid login.html' target='mainFrame'>Results</a>
+<table style='width: 100%'><tr><td valign='top'>Invalid Credit card details (1/0/0)</td><td valign='top' align='right'>
+  <a href='Invalid Credit card details.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
 
 <table width='100%' class='test-passed'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>BrightBeer Batch Creation (1/0/0)</td><td valign='top' align='right'>
-  <a href='BrightBeer Batch Creation.html' target='mainFrame'>Results</a>
-</td></tr></table>
-</td></tr><p/>
-</table>
-
-<table width='100%' class='test-passed'>
-<tr><td>
-<table style='width: 100%'><tr><td valign='top'>Fermentation Batch Creation (1/0/0)</td><td valign='top' align='right'>
-  <a href='Fermentation Batch Creation.html' target='mainFrame'>Results</a>
-</td></tr></table>
-</td></tr><p/>
-</table>
-
-<table width='100%' class='test-passed'>
-<tr><td>
-<table style='width: 100%'><tr><td valign='top'>Yeast Management Batch Creation (1/0/0)</td><td valign='top' align='right'>
-  <a href='Yeast Management Batch Creation.html' target='mainFrame'>Results</a>
+<table style='width: 100%'><tr><td valign='top'>Valid Pillow Purchase (1/0/0)</td><td valign='top' align='right'>
+  <a href='Valid Pillow Purchase.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
